# XPaceTools

./: .gitignore  CMakeLists.txt  README.md  quaternion.cpp  quaternion.h  vector.cpp  vector.h  xpace_log_file.cpp  xpace_log_file.h
resources/: CreateTestCases.nb  example_output.html  html_template.html  vega_lite_conf.json
src/: CMakeLists.txt  gaussian_filter.cpp  gaussian_filter.hpp  log_file.cpp  log_file.hpp  math.cpp  math.hpp  parser.cpp  parser.hpp  statistic.cpp  statistic.hpp  xpace_log_file.cpp  xpace_log_file.h  xpace_math.cpp  xpace_math.h  xpace_parser.cpp  xpace_parser.h  xpace_statistic.cpp  xpace_statistic.h
tests/: CMakeLists.txt  xpace_log_file_test.cpp
tools/: xpaceStatistics.cpp
